[package]
version = "0.4.4"
name = "tidechain-runtime"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
edition = "2021"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { version = "2.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
hex-literal = { version = "0.3.3", optional = true }
static_assertions = "1.1.0"
log = { version = "0.4.17", default-features = false }
smallvec = "1.6.1"

# Substrate Pallets (almost identical to Polkadot)
pallet-authorship = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-babe = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-balances = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-grandpa = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-im-online = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-offences = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-session = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-staking = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-multisig = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-staking-reward-curve = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-utility = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-timestamp = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-treasury = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-collective = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-elections-phragmen = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-membership = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-scheduler = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-bounties = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-indices = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-identity = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-proxy = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-tips = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-recovery = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-election-provider-multi-phase = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-authority-discovery = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-bags-list = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-preimage = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }

# Benchmarking Pallets
pallet-session-benchmarking = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }
pallet-offences-benchmarking = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }

# Substrate Frames
frame-support = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
frame-system = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
frame-executive = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
frame-election-provider-support = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }

# Substrate SPs
sp-io = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-api = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-offchain = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-runtime = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-session = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-std = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-transaction-pool = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-version = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-authority-discovery = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-block-builder = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-consensus-babe = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-core = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-inherents = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-staking = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-npos-elections = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }

# Benchmarking
frame-benchmarking = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }
frame-system-benchmarking = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }
pallet-election-provider-support-benchmarking = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }

# Local Dependecies
tidefi-primitives = { git = "https://github.com/tidelabs/primitives", branch = "dev", default-features = false }
pallet-tidefi = { path = "../../frame/tidefi", default-features = false }
pallet-tidefi-stake = { path = "../../frame/tidefi-stake", default-features = false }
pallet-tidefi-rpc-runtime-api = { path = '../../frame/tidefi-rpc/runtime-api', default-features = false }
pallet-quorum = { path = "../../frame/quorum", default-features = false }
pallet-oracle = { path = "../../frame/oracle", default-features = false }
pallet-security = { path = "../../frame/security", default-features = false }
pallet-fees = { path = "../../frame/fees", default-features = false }

pallet-assets = { default-features = false, path = "../../frame/assets" }
pallet-asset-registry = { path = "../../frame/asset-registry", default-features = false }

frame-try-runtime = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }

[dev-dependencies]
sp-io = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }

[features]
default = ["std"]
std = [
    "scale-info/std",
    'codec/std',
    'log/std',
    'frame-try-runtime/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-authorship/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-bags-list/std',
    'pallet-im-online/std',
    'pallet-offences/std',
    'pallet-session/std',
    'pallet-staking/std',
    'pallet-authority-discovery/std',
    'pallet-multisig/std',
    'pallet-indices/std',
    'pallet-identity/std',
    'pallet-proxy/std',
    'pallet-recovery/std',
    'pallet-utility/std',
    "pallet-bounties/std",
    'pallet-tips/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-treasury/std',
    'pallet-collective/std',
    'pallet-elections-phragmen/std',
    'frame-election-provider-support/std',
    'pallet-membership/std',
    'pallet-scheduler/std',
    "pallet-election-provider-multi-phase/std",
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-staking/std',
    'sp-std/std',
    'sp-io/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    "sp-npos-elections/std",

    "pallet-assets/std",
    
    "pallet-tidefi/std",
    "pallet-tidefi-stake/std",
    "pallet-tidefi-rpc-runtime-api/std",
    "pallet-quorum/std",
    "pallet-oracle/std",
    "pallet-security/std",
    "pallet-asset-registry/std",
    "pallet-fees/std",
    "pallet-preimage/std",

    "tidefi-primitives/std"
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking",
    "frame-system/runtime-benchmarks",
    "hex-literal",
    "pallet-collective/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "frame-election-provider-support/runtime-benchmarks",
    "pallet-election-provider-support-benchmarking/runtime-benchmarks",
    "pallet-bounties/runtime-benchmarks",
    "pallet-election-provider-multi-phase/runtime-benchmarks",
    "pallet-elections-phragmen/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-proxy/runtime-benchmarks",
    "pallet-multisig/runtime-benchmarks",
    "pallet-indices/runtime-benchmarks",
    "pallet-im-online/runtime-benchmarks",
    "pallet-identity/runtime-benchmarks",
    "pallet-membership/runtime-benchmarks",
    "pallet-multisig/runtime-benchmarks",
    "pallet-scheduler/runtime-benchmarks",
    "pallet-treasury/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
    "pallet-session-benchmarking",
    "pallet-offences-benchmarking",
    "pallet-assets/runtime-benchmarks",
    'pallet-bags-list/runtime-benchmarks',
	"pallet-preimage/runtime-benchmarks",
    
    "pallet-fees/runtime-benchmarks",
    "pallet-tidefi/runtime-benchmarks",
    "pallet-tidefi-stake/runtime-benchmarks",
    "pallet-quorum/runtime-benchmarks",
    "pallet-oracle/runtime-benchmarks",
    "pallet-asset-registry/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-tips/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-utility/try-runtime",
]