[package]
name = "tidechain-voter-bags"
version = "0.1.0"
authors = ["Semantic Network Team"]
edition = "2021"

[dependencies]
generate-bags = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-io = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
structopt = "0.3.26"

tidechain-runtime = { path = "../../runtime/tidechain" }
hertel-runtime = { path = "../../runtime/hertel" }