[package]
name = "tidechain-voter-bags"
version = "0.1.0"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
edition = "2021"

[dependencies]
generate-bags = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-io = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
structopt = "0.3.25"

tidechain-runtime = { path = "../../runtime/tidechain" }
lagoon-runtime = { path = "../../runtime/lagoon" }