[package]
authors = ["Semantic Network Team"]
description = ''
edition = '2021'
homepage = 'https://substrate.dev'
name = 'pallet-tidefi-rpc-runtime-api'
repository = ''
version = "1.0.0"

[dependencies]
codec               = { package = 'parity-scale-codec', version = '2.2.0', default-features = false, features = ['derive'] }
tidefi-primitives   = { git = "https://github.com/tide-labs/primitives", branch = "dev", default-features = false }
sp-api              = { git = "https://github.com/tide-labs/substrate", branch = "tidechain", default-features = false }
sp-runtime          = { git = "https://github.com/tide-labs/substrate", branch = "tidechain", default-features = false }
frame-support       = { git = "https://github.com/tide-labs/substrate", branch = "tidechain", default-features = false }
serde               = { version = '1.0.124', features = ['derive'], optional = true }

[features]
default = ['std']
std     = ['codec/std', 'sp-api/std', 'sp-runtime/std', 'serde', 'tidefi-primitives/std', 'frame-support/std']
