[package]
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
description = ''
edition = '2021'
homepage = 'https://substrate.dev'
name = 'pallet-tidefi-rpc-runtime-api'
repository = ''
version = "1.0.0"

[dependencies]
codec               = { package = 'parity-scale-codec', version = '3', default-features = false, features = ['derive'] }
tidefi-primitives   = { git = "https://github.com/tidelabs/primitives", branch = "substrate-monthly-2023-02", default-features = false }
sp-api              = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev", default-features = false }
sp-runtime          = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev", default-features = false }
frame-support       = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev", default-features = false }
serde               = { version = '1.0.124', features = ['derive'], optional = true }

[features]
default = ['std']
std     = ['codec/std', 'sp-api/std', 'sp-runtime/std', 'serde', 'tidefi-primitives/std', 'frame-support/std']
