[package]
authors = ["Semantic Network Team"]
description = ''
edition = '2021'
homepage = 'https://substrate.dev'
name = 'pallet-wrapr-rpc-runtime-api'
repository = ''
version = "1.0.0"

[dependencies]
codec               = { package = 'parity-scale-codec', version = '2.2.0', default-features = false, features = ['derive'] }
tidefi-primitives   = { git = "https://tributary.semantic-network.tech/semnet/tidefi/back/tidefi-primitives", branch = "feat/tidefi-1.0.1", default-features = false }
sp-api              = { git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1", default-features = false }
sp-runtime          = { git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1", default-features = false }
serde               = { version = '1.0.124', features = ['derive'], optional = true }
frame-support       = { git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1", default-features = false }


[features]
default = ['std']
std     = ['codec/std', 'sp-api/std', 'sp-runtime/std', 'serde', 'tidefi-primitives/std']
